gcc/testsuite/g++.target/aarch64/sve/acle/general-c++/type_redef_5.c
/* { dg-do compile } */

typedef int svbool_t; /* { dg-message "note: previous declaration as 'typedef int svbool_t'" } */

#pragma GCC aarch64 "arm_sve.h"  /* { dg-error {conflicting declaration '[^'\n]* svbool_t'} } */
